--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 					<form id="selectDish" class="form-inline">
 						<input type="text" id="keywords" name="keywords" class="form-control" placeholder="Enter key words"/>
 						<select name="dishType" class="form-control" id="dishType">
-							<option value="starter">Starter</option>
-							<option value="main dish">Main</option>
-							<option value="dessert">Dessert</option>
+							<option value="Appetizers">Appetizers</option>
+							<option value="Main Dish">Main Dish</option>
+							<option value="Desserts">Dessert</option>
 						</select>
 				
 						<input class="btn btn-primary" id="searchDishButton" type="button" value="search">
