Testing with loading message

--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
 			</div> <!-- end allDishesView -->
 
 	  	<!-- 
+	  		loadingView ====================================
+	  	-->
+	  	<div class="col-md-10" id="loadingView" style="display:none">
+	  		Loading ...
+	  	</div>
+
+
+	  	<!-- 
 	  		dishInfoView ====================================
 	  	-->
 		<div class="col-md-10" id="dishInfoView" style="display:none;">
@@ -243,6 +251,7 @@
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/indexView.js"></script>
 	<script src="js/view/indexViewController.js"></script>
+	<script src="js/view/loadingView.js"></script>
 	<script src="js/view/dinnerOptionView.js"></script>
 	<script src="js/view/dinnerOptionViewController.js"></script>
 	<script src="js/view/allDishesView.js"></script>
