--- a/index.html
+++ b/index.html
@@ -67,11 +67,19 @@
 		</div> <!-- dinnerOptionView -->
 
 		<!-- 
+	  		loadingView ====================================
+	  	-->
+	  	<div class="col-md-10" id="loadingView" style="display:none">
+	  		Loading ...
+	  	</div>
+
+
+		<!-- 
 	  		allDishesView ====================================
 	  	-->
 	  	<div class="col-md-10" id="allDishesView" style="display:none">
 				<div class="col-md-12" id="searchField">
-					<h4>Select dish</h4>
+					<h4>Search for dishes</h4>
 					<form id="selectDish" class="form-inline">
 						<input type="text" id="keywords" name="keywords" class="form-control" placeholder="Enter key words"/>
 						<select name="dishType" class="form-control" id="dishType">
@@ -124,13 +132,7 @@
 				</div>
 			</div> <!-- end allDishesView -->
 
-	  	<!-- 
-	  		loadingView ====================================
-	  	-->
-	  	<div class="col-md-10" id="loadingView" style="display:none">
-	  		Loading ...
-	  	</div>
-
+	  	
 
 	  	<!-- 
 	  		dishInfoView ====================================
